# Synapse

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  audit.toml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  DESIGN.md  PRODUCT.md  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: app.rs  browse.rs  cards.rs  deck.rs  export.rs  import.rs  maintenance.rs  media.rs  mod.rs  notetype.rs  optimize.rs  plugins.rs  stats.rs  study.rs  tags.rs
apps/desktop/src/app/: AppShell.tsx  providers.tsx  router.tsx
apps/desktop/src/components/: CardFace.tsx  CommandPalette.tsx  DeckOptionsDialog.tsx  EmptyState.tsx  FieldEditor.tsx  Kbd.tsx  KeyboardShortcutsDialog.tsx  Logo.tsx  RouteError.tsx  ScreenHeader.tsx  TitleBar.tsx
apps/desktop/src/components/decks/: CreateDeckForm.tsx  DeckActionsMenu.tsx  DeckCounts.tsx  DeckGridCard.tsx  DeckRow.tsx  DeleteDeckDialog.tsx  FilteredDeckDialog.tsx  HomeHero.tsx  IncreaseLimitControl.tsx  TodaySummary.tsx
apps/desktop/src/components/editor/: EditorToolbar.tsx
apps/desktop/src/components/occlusion/: OcclusionEditor.tsx
apps/desktop/src/components/stats/: AnswerButtonsChart.tsx  DeckTable.tsx  ExportButton.tsx  ForecastChart.tsx  FsrsPanels.tsx  HourlyChart.tsx  InsightsRow.tsx  MaturityDonut.tsx  PanelSkeleton.tsx  RetentionChart.tsx  StatCards.tsx  StatsFilters.tsx  YearHeatmap.tsx  chartTheme.ts  statQuery.ts
apps/desktop/src/components/ui/: button.test.tsx  button.tsx
apps/desktop/src/hooks/: useFocusTrap.ts
apps/desktop/src/lib/: clozeUtils.test.ts  clozeUtils.ts  editorMedia.ts  i18n.ts  imageOcclusion.test.ts  imageOcclusion.ts  ipc.ts  media.ts  motion.ts  pluginHost.ts  queryKeys.ts  renderCard.test.ts  renderCard.ts  tts.ts  typedAnswerDiff.test.ts  typedAnswerDiff.ts  useCoreEvents.ts  utils.test.ts
apps/desktop/src/locales/: en.ts
apps/desktop/src/routes/: AddScreen.tsx  BrowseScreen.tsx  DeckBrowserScreen.tsx  NotetypeScreen.tsx  SettingsScreen.tsx  StatsScreen.tsx  StudyScreen.tsx  StudySessionScreen.tsx
apps/desktop/src/stores/: theme.ts  ui.ts
apps/desktop/src/styles/: card-base.css  globals.css
apps/desktop/src/test/: setup.ts
apps/desktop/test-e2e/: package.json  tsconfig.json  wdio.conf.ts
apps/desktop/test-e2e/tests/: smoke.test.ts
crates/synapse-ankifmt/: Cargo.toml
crates/synapse-ankifmt/examples/: gen_fixtures.rs
crates/synapse-ankifmt/src/: lib.rs  pb.rs  reader.rs  testkit.rs  writer.rs
crates/synapse-ankifmt/tests/: real_fixtures.rs  roundtrip.rs
crates/synapse-core/: Cargo.toml
crates/synapse-core/src/: ai.rs  collection.rs  error.rs  events.rs  ipc.rs  lib.rs  ports.rs  scheduling.rs  undo.rs
crates/synapse-core/src/model/: canonical.rs  entities.rs  mod.rs  study.rs
crates/synapse-db/: Cargo.toml
crates/synapse-db/src/: backup.rs  browse.rs  cards.rs  export.rs  filtered.rs  import.rs  lib.rs  migrations.rs  notetype.rs  schema.rs  search.rs  stats.rs  stock.rs  storage.rs  study.rs  tags.rs
crates/synapse-media/: Cargo.toml
crates/synapse-media/src/: lib.rs
crates/synapse-plugin/: Cargo.toml
crates/synapse-plugin/src/: lib.rs
crates/synapse-render/: Cargo.toml
crates/synapse-render/src/: cloze.rs  filters.rs  lib.rs  parser.rs
crates/synapse-scheduler/: Cargo.toml
crates/synapse-scheduler/src/: common.rs  fsrs.rs  lib.rs  optimizer.rs  sm2.rs
crates/synapse-search/: Cargo.toml
crates/synapse-search/src/: lib.rs
docs/: ARCHITECTURE.md  release-signing.md  user-guide.md
docs/adr/: 001-clean-architecture.md  002-dual-scheduler.md  003-plugin-worker-sandbox.md
fixtures/: sample-v11.apkg  sample-v18.apkg
