[package]
name = "synapse-ankifmt"
description = "Anki .apkg/.colpkg import & export. Detects schema v11/v18, maps to/from the canonical model."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
serde_json.workspace = true
zip = "2"
zstd = "0.13"
tempfile = "3"
# Reads the SQLite collection embedded in the package.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
# Integration tests exercise the full reader -> storage import pipeline.
synapse-db.workspace = true
