[package]
name = "synapse-core"
description = "Domain model, ports, events and application layer for Synapse. No UI, no IO frameworks."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ts-rs.workspace = true
