[package]
name = "synapse-db"
description = "SQLite storage adapter for Synapse: canonical schema, migrations, queries. Implements core's Storage port."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
# rusqlite (bundled SQLite) is added in M1, when the canonical schema lands.
