[package]
name = "synapse-db"
description = "SQLite storage adapter for Synapse: canonical schema, migrations, queries. Implements core's Storage port."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
synapse-scheduler.workspace = true
serde.workspace = true
serde_json.workspace = true
# Bundled SQLite: compiled from source via cc (MSVC/clang). No system SQLite needed.
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
regex = "1"
zip = "2"
