[package]
name = "synapse-plugin"
description = "Plugin host abstraction: manifest, capability model, extension-point registry. Architecture only in MVP."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
# A sandboxed JS/Wasm runtime (QuickJS/Wasmtime) is added post-MVP.
