[package]
name = "synapse-plugin"
description = "Plugin host abstraction: manifest, capability model, extension-point registry. Architecture only in MVP."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
