[package]
name = "synapse-search"
description = "Full-text & faceted search over notes via Tantivy, with an Anki-style query parser."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
tantivy = "0.22"
