[package]
name = "synapse-search"
description = "Full-text & faceted search over notes via SQLite FTS5, with an Anki-style query parser."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
synapse-core.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
